Añadí las nuevas implementaciones para seleccionar los meses, fechas y trimestres

--- a/styles/seleccionar-fecha.css
+++ b/styles/seleccionar-fecha.css
@@ -20,7 +20,7 @@ label {
   background-color: var(--tg-theme-button-color);
 }
 
-input {
+input, select {
   display: block;
   width: 100%;
   box-sizing: border-box;
